fixing overflow bug
fixing the overflow that happened because of the animation

--- a/css/responsive-mobile.css
+++ b/css/responsive-mobile.css
@@ -19,7 +19,7 @@
 
     .navbar ul li,
     .navbar ul li a {
-        margin-top: 80px;
+        margin-top: 40%;
         font-size: 30px;
     }
     
