--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ header .logo {
     background-color: var(--bg-color);
     height: 100%;
     padding: 40px 0px;
+    overflow-x: hidden;
 }
 
 /*styling the first side*/
@@ -257,6 +258,7 @@ header .logo {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .about-page .first-side {
@@ -330,6 +332,7 @@ header .logo {
     background-color: var(--bg-color);
     height: 100%;
     padding: 100px 0px;
+    overflow-x: hidden;
 }
 
 .skills-page .first-side {
@@ -375,6 +378,7 @@ header .logo {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 
 }
 
@@ -596,6 +600,7 @@ header .logo {
     align-items: center;
     flex-direction: column;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .contact-page form {
